# MPU6050

./: CMakeLists.txt  Doxyfile  README.md
include/: mpu6050.h
lib/: CMakeLists.txt
src/: accelerometer.c  calibrate.c  configure.c  dmp.c  endian_conversion.h  gyro.c  internals.c  internals.h  motionApp.txt  private.h  programDMP.c  temperature.c
